span overwrite issue sorted and collapse component updated

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ main {
 }
 input[type="text"] {
   height: auto;
-  width: 100%;
 }
 textarea {
   font-family: Open Sans, sans-serif;
@@ -38,9 +37,13 @@ form {
 }
 h2 {
   margin-top: 1rem;
+  margin-left: .8rem;
 }
 section h3 {
   margin-bottom: 1rem;
+}
+section.options p {
+    margin-left: 0;
 }
 img {
   height: auto;
@@ -106,7 +109,10 @@ textarea {
 .code-header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
+}
+h3.code-title {
+  padding-top: .6rem;
 }
 .code-title:not(only-child) {
   margin-bottom: 0 !important;
@@ -178,6 +184,15 @@ pre {
   display: block !important;
 }
 
+/* ADITIONAL COMPONENT STYLING FOR REVIEW */
+
 .row {
   background-color: #ffffff;
 }
+
+
+h1, p {
+  margin-left: 14px;
+}
+
+
